# scx_teddy

./: .gitignore  .gitmodules  DEBUG_GUIDE.md  README.md  README.zh-TW.md  bench_mark.sh  bench_mark_gradual.sh  debug.config  feature_analysis.ipynb  fix_mutex.c  random_timer.c  slow_timer.c  train.py  train_config.config
gui/: README.md  README.md.zh-TW.md  app.py  run.sh  scx_runner.py  sys_metrics.py  sys_topology.py  theme.py
gui/tabs/: _common.py  _config_editor.py  _target.py  classify.py  collect.py  overall.py  static_tsne.py  train.py
scx_teddy/: Cargo.toml
scx_teddy/src/: classifier.rs  game_task_finder.rs  main.rs  task_stats.rs  topology.rs
scx_teddy/src/bpf/: intf.h  main.bpf.c
target_finder_helper/: README.md  game_task_finder.py
