[package]
name = "scx_teddy"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
libbpf-rs = "0.26.1"
scx_utils = { git = "https://github.com/sched-ext/scx", rev = "83197d157f1cf871935cde4e71d9fcc79688c216" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plain = "0.2"

[build-dependencies]
scx_cargo = { git = "https://github.com/sched-ext/scx", rev = "83197d157f1cf871935cde4e71d9fcc79688c216" }
